--- a/src/i18n/locales/pt_BR/translation.json
+++ b/src/i18n/locales/pt_BR/translation.json
@@ -78,5 +78,9 @@
     "admin": "Administração",
     "logout": "Sair",
     "login": "Entrar"
+  },
+  "common": {
+    "yes": "Sim",
+    "no": "Não"
   }
 }
